--- a/package.json
+++ b/package.json
@@ -7,22 +7,18 @@
     "dev": "ts-node-dev -r dotenv/config ./src/server.ts",
     "build": "tsc",
     "start": "node ./dist/server.js"
-    
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AndreAndrade141/CRUD-LOJA.git"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/AndreAndrade141/CRUD-LOJA/issues"
   },
-
   "homepage": "https://github.com/AndreAndrade141/CRUD-LOJA#readme",
-  
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
@@ -40,8 +36,9 @@
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   },
-  
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.12.0"
   }
 }
