--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,9 @@
 PROJECT_NAME='Hello API Env'
+
+DATABASE_HOST= ''
+DATABASE_NAME= ''
+DATABASE_PORT= ''
+DATABASE_USER= ''
+DATABASE_PASS= ''
+
+JWT_SALT= ''
